--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "alembic (>=1.18.4,<2.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
+    "gunicorn (>=25.1.0,<26.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
