--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     networks:
       MARKET_NETWORK:
         aliases:
-          - web
+          - web-product
 
     healthcheck:
       test: [ "CMD-SHELL", "curl -f http://localhost:8000/system/health || exit 1" ]
@@ -36,7 +36,7 @@ services:
     networks:
       MARKET_NETWORK:
         aliases:
-          - web
+          - web-product
 
     healthcheck:
       test: [ "CMD-SHELL", "curl -f http://localhost:8000/system/health || exit 1" ]
