--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,56 +15,56 @@ jobs:
   ############################################################
   # TESTS
   ############################################################
-  tests:
-    runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:18
-        env:
-          POSTGRES_USER: test
-          POSTGRES_PASSWORD: test
-          POSTGRES_DB: test
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U test"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Poetry
-        run: pip install poetry
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-          cache: "poetry"
-
-      - name: Install dependencies
-        run: poetry install --no-interaction --no-ansi --no-root
-      - name: Set Infisical
-        run: |
-          echo "===== Update .env ====="
-          cat > .env <<EOF
-          INFISICAL_HOST=${{ secrets.INFISICAL_HOST }}
-          INFISICAL_TOKEN=${{ secrets.INFISICAL_TOKEN }}
-          ENVIRONMENT_SLUG=${{ secrets.ENVIRONMENT_SLUG_TESTS }}
-          EOF
-          chmod +x deploy/tests/*.sh
-
-      - name: Run tests
-        run: poetry run deploy/tests/test_entrypoint.sh
+#  tests:
+#    runs-on: ubuntu-latest
+#
+#    services:
+#      postgres:
+#        image: postgres:18
+#        env:
+#          POSTGRES_USER: test
+#          POSTGRES_PASSWORD: test
+#          POSTGRES_DB: test
+#        ports:
+#          - 5432:5432
+#        options: >-
+#          --health-cmd="pg_isready -U test"
+#          --health-interval=10s
+#          --health-timeout=5s
+#          --health-retries=5
+#
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Install Poetry
+#        run: pip install poetry
+#
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: "3.13"
+#          cache: "poetry"
+#
+#      - name: Install dependencies
+#        run: poetry install --no-interaction --no-ansi --no-root
+#      - name: Set Infisical
+#        run: |
+#          echo "===== Update .env ====="
+#          cat > .env <<EOF
+#          INFISICAL_HOST=${{ secrets.INFISICAL_HOST }}
+#          INFISICAL_TOKEN=${{ secrets.INFISICAL_TOKEN }}
+#          ENVIRONMENT_SLUG=${{ secrets.ENVIRONMENT_SLUG_TESTS }}
+#          EOF
+#          chmod +x deploy/tests/*.sh
+#
+#      - name: Run tests
+#        run: poetry run deploy/tests/test_entrypoint.sh
 
 
   ###########################################################
   # BUILD
   ###########################################################
   build:
-    needs: tests
+#    needs: tests
     runs-on: ubuntu-latest
 
     steps:
