--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "bcrypt (>=5.0.0,<6.0.0)",
     "pyjwt (>=2.11.0,<3.0.0)",
     "cryptography (>=46.0.5,<47.0.0)",
+    "boto3 (>=1.42.53,<2.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
