--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pyjwt (>=2.11.0,<3.0.0)",
     "cryptography (>=46.0.5,<47.0.0)",
     "boto3 (>=1.42.53,<2.0.0)",
+    "python-multipart (>=0.0.20,<0.1.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
