--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "cryptography (>=46.0.5,<47.0.0)",
     "boto3 (>=1.42.53,<2.0.0)",
     "python-multipart (>=0.0.20,<0.1.0)",
+    "redis (>=6.4.0,<7.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
